--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-scikit-learn==0.22.1
-matplotlib==3.2.2
-numpy==1.18.1
-pandas==1.0.5
-
+scikit-learn==1.2.2
+pandas==1.5.3
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+numpy==1.24.2
+streamlit==1.21.0
